--- a/css/css.css
+++ b/css/css.css
@@ -3,3 +3,35 @@
 *{
     font-family: 'Manrope', sans-serif;
 }
+
+header{
+    width: 100%;
+    height: 7em;
+    background-color: #1d3557;
+    margin-bottom: 1em;
+}
+
+.texto-barra{
+    color: #f1faee;
+    padding: 2em;;
+}
+
+.nav-link{
+    background-color: #1d3557;
+    color: #f1faee!important;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.btn-questoes{
+    background-color: #e63946;
+}
+
+.card{
+    border: none!important;
+}
+
+
+p{
+    margin-bottom: 0px!important;
+}
