--- a/css/css.css
+++ b/css/css.css
@@ -7,7 +7,7 @@
 header{
     width: 100%;
     height: 7em;
-    background-color: #1d3557;
+    background-color: #232323;
     margin-bottom: 1em;
 }
 
@@ -17,14 +17,14 @@ header{
 }
 
 .nav-link{
-    background-color: #1d3557;
+    background-color: #f4a261;
     color: #f1faee!important;
     margin: 5px;
     border-radius: 5px;
 }
 
 .btn-questoes{
-    background-color: #e63946;
+    background-color: #343434;
 }
 
 .card{
@@ -35,3 +35,10 @@ header{
 p{
     margin-bottom: 0px!important;
 }
+
+.footer {
+    background-color: #232323;
+
+}
+
+
