--- a/css/css.css
+++ b/css/css.css
@@ -17,7 +17,7 @@ header{
 }
 
 .nav-link{
-    background-color: #f4a261;
+    background-color: #c81d25;
     color: #f1faee!important;
     
     
@@ -55,12 +55,12 @@ input.form-control{
 }
 
 .btn.btn-enviar{
-    background-color: #f4a261;
+    background-color: #c81d25;
     color: #f1faee;
     border-radius: 0px;
     margin-bottom: 2em;
 }
 
-.alert.alert-dark{
+.alert.alert-danger{
     border-radius: 0px;
 }
